fix(css): fix button hover animation not showing
removed unneeded comma from selectors

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -225,7 +225,7 @@ a {
   will-change: box-shadow, color;
 }
 
-.return:hover, .share:hover, .button:hover, select:hover,{
+.return:hover, .share:hover, .button:hover, select:hover {
   box-shadow: inset 0 0 0 400px var(--theme, var(--central-ministry-colour));
   color: var(--theme-accent, white);
 }
